# zaindari

./: .gitignore  Cargo.toml  README.md
crates/zaindari-cli/: Cargo.toml
crates/zaindari-cli/src/: main.rs
crates/zaindari-cli/tests/: cli.rs
crates/zaindari-core/: Cargo.toml
crates/zaindari-core/src/: config.rs  engine.rs  lib.rs  policy.rs  render.rs  report.rs  run.rs
crates/zaindari-core/src/adapters/: gate.rs  guard.rs  mod.rs  native.rs  watch.rs
crates/zaindari-core/tests/fixtures/: aatxe_baseline.json  aatxe_good.json  aatxe_regressed.json  cardinal_anomaly.json  cardinal_clean.json  iratxo_fail.json  iratxo_fail.txt  iratxo_pass.json  iratxo_pass.txt
dogfood/: watch-names.json  zaindari.toml
