[package]
name = "zaindari-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "zaindari — one CLI over three LLM-trust engines (Gate, Guard, Watch)."

[[bin]]
name = "zaindari"
path = "src/main.rs"

[dependencies]
zaindari-core = { path = "../zaindari-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
